// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateMakefile generates makefile for esp32 archive file. 1`] = `
"# === Basic settings ===
CC := /opt/esp-toolchain/xtensa-esp32-elf-gcc
AR := /opt/esp-toolchain/xtensa-esp32-elf-ar

# === Directory settings ===
SRC_DIR := /project/myapp/src
DIST_DIR  := /project/myapp/dist
BUILD_DIR := /project/myapp/dist/build
PACKAGES_DIR := /project/myapp/packages

TARGET := /project/myapp/dist/build/libmyapp.a

# === Check for illegal file name prefixes ===
ILLEGAL_PREFIX_FILES := $(shell find $(SRC_DIR) -path $(DIST_DIR) -prune -o -path $(PACKAGES_DIR) -prune -o -type f -name "bs_*.c" -print)
ifneq ($(ILLEGAL_PREFIX_FILES),)
  $(error ERROR: You cannot use 'bs_' prefix for C source file names. Please remove or rename the following files: \\
         $(ILLEGAL_PREFIX_FILES))
endif

# === Source and object file settings ===
ORIG_SOURCES := $(shell find $(SRC_DIR) -path $(DIST_DIR) -prune -o -path $(PACKAGES_DIR) -prune -o -type f -name "*.c" -print)
ORIG_HEADERS := $(shell find $(SRC_DIR) -path $(DIST_DIR) -prune -o -path $(PACKAGES_DIR) -prune -o -type f -name "*.h" -print)
DIST_SOURCES := $(foreach src,$(ORIG_SOURCES), \\
    $(subst $(SRC_DIR),$(DIST_DIR), $(src)) \\
)
DIST_HEADERS := $(foreach hdr,$(ORIG_HEADERS), \\
    $(subst $(SRC_DIR),$(DIST_DIR), $(hdr)) \\
)
DIST_SOURCES += $(shell find $(DIST_DIR) -path $(BUILD_DIR) -prune -o -type f -name "bs_*.c" -print)
OBJECTS := $(patsubst $(DIST_DIR)/%.c, $(BUILD_DIR)/%.o, $(DIST_SOURCES))

# === Compilation settings ===
INCLUDES := -I $(DIST_DIR) -I $(SRC_DIR) -I /opt/esp-idf/components/freertos/include -I /opt/esp-idf/components/esp_common/include
CFLAGS := $(INCLUDES) -O2 -w -fno-common -ffunction-sections -fdata-sections -mtext-section-literals -mlongcalls -fno-zero-initialized-in-bss

# ====================================================================
.PHONY: all

all: $(TARGET)

# Copy rules
# --------------------------------------------------------

define COPY_RULE_TEMPLATE
$(1): $(2)
	@echo "Copying $$< to $$@"
	@mkdir -p $$(dir $$@)
	@cp $$< $$@
endef

$(foreach src,$(ORIG_SOURCES), \\
    $(eval $(call COPY_RULE_TEMPLATE, \\
        $(subst $(SRC_DIR),$(DIST_DIR), $(src)), \\
        $(src) \\
    )) \\
)

$(foreach hdr,$(ORIG_HEADERS), \\
    $(eval $(call COPY_RULE_TEMPLATE, \\
        $(subst $(SRC_DIR),$(DIST_DIR), $(hdr)), \\
        $(hdr) \\
    )) \\
)

# Build rules
# --------------------------------------------------------

$(TARGET): $(OBJECTS) | $(DIST_HEADERS)
	@echo "Archiving library: $@"
	@mkdir -p $(@D)
	$(AR) rcs $@ $^

vpath %.c $(DIST_DIR)

$(BUILD_DIR)/%.o: $(DIST_DIR)/%.c
	@echo "Compiling: $< -> $@"
	@mkdir -p $(@D)
	$(CC) $(CFLAGS) -MMD -MP -c $< -o $@

-include $(wildcard $(BUILD_DIR)/*.d)

.PHONY: clean
clean:
	@echo "Cleaning dist directory..."
	@rm -rf $(DIST_DIR)"
`;

exports[`generateMakefile generates makefile for host shared library. 1`] = `
"# === Basic settings ===
CC := cc
AR := ar

# === Directory settings ===
SRC_DIR := /project/myapp/src
DIST_DIR  := /project/myapp/dist
BUILD_DIR := /project/myapp/dist/build
PACKAGES_DIR := /project/myapp/packages

TARGET := /project/myapp/dist/build/libmyapp.a

# === Check for illegal file name prefixes ===
ILLEGAL_PREFIX_FILES := $(shell find $(SRC_DIR) -path $(DIST_DIR) -prune -o -path $(PACKAGES_DIR) -prune -o -type f -name "bs_*.c" -print)
ifneq ($(ILLEGAL_PREFIX_FILES),)
  $(error ERROR: You cannot use 'bs_' prefix for C source file names. Please remove or rename the following files: \\
         $(ILLEGAL_PREFIX_FILES))
endif

# === Source and object file settings ===
ORIG_SOURCES := $(shell find $(SRC_DIR) -path $(DIST_DIR) -prune -o -path $(PACKAGES_DIR) -prune -o -type f -name "*.c" -print)
ORIG_HEADERS := $(shell find $(SRC_DIR) -path $(DIST_DIR) -prune -o -path $(PACKAGES_DIR) -prune -o -type f -name "*.h" -print)
DIST_SOURCES := $(foreach src,$(ORIG_SOURCES), \\
    $(subst $(SRC_DIR),$(DIST_DIR), $(src)) \\
)
DIST_HEADERS := $(foreach hdr,$(ORIG_HEADERS), \\
    $(subst $(SRC_DIR),$(DIST_DIR), $(hdr)) \\
)
DIST_SOURCES += $(shell find $(DIST_DIR) -path $(BUILD_DIR) -prune -o -type f -name "bs_*.c" -print)
OBJECTS := $(patsubst $(DIST_DIR)/%.c, $(BUILD_DIR)/%.o, $(DIST_SOURCES))

# === Compilation settings ===
INCLUDES := -I $(DIST_DIR) -I $(SRC_DIR)
CFLAGS := $(INCLUDES) -O2 -w -fPIC -DLINUX64

# ====================================================================
.PHONY: all

all: $(TARGET)

# Copy rules
# --------------------------------------------------------

define COPY_RULE_TEMPLATE
$(1): $(2)
	@echo "Copying $$< to $$@"
	@mkdir -p $$(dir $$@)
	@cp $$< $$@
endef

$(foreach src,$(ORIG_SOURCES), \\
    $(eval $(call COPY_RULE_TEMPLATE, \\
        $(subst $(SRC_DIR),$(DIST_DIR), $(src)), \\
        $(src) \\
    )) \\
)

$(foreach hdr,$(ORIG_HEADERS), \\
    $(eval $(call COPY_RULE_TEMPLATE, \\
        $(subst $(SRC_DIR),$(DIST_DIR), $(hdr)), \\
        $(hdr) \\
    )) \\
)

# Build rules
# --------------------------------------------------------

$(TARGET): $(OBJECTS) | $(DIST_HEADERS)
	@echo "Archiving library: $@"
	@mkdir -p $(@D)
	$(AR) rcs $@ $^

vpath %.c $(DIST_DIR)

$(BUILD_DIR)/%.o: $(DIST_DIR)/%.c
	@echo "Compiling: $< -> $@"
	@mkdir -p $(@D)
	$(CC) $(CFLAGS) -MMD -MP -c $< -o $@

-include $(wildcard $(BUILD_DIR)/*.d)

.PHONY: clean
clean:
	@echo "Cleaning dist directory..."
	@rm -rf $(DIST_DIR)"
`;
